package com.handmade.ecommerce.tenant.model;

import jakarta.persistence.*;
import org.chenile.jpautils.entity.AbstractJpaStateEntity;
@Entity
@Table(name = "tenant")
public class Tenant extends AbstractJpaStateEntity
{

}
